@@ -10,7 +10,6 @@
 - activate accelerator keys like <DEL> in shell view folders
 - program manager "progman" DDE server
 - command line parameters like "/e,/root,c:\" and "::{20D04FE0-3AEA-1069-A2D8-08002B30309D}\::{21EC2020-3AEA-1069-A2DD-08002B30309D}" (launch of control panel)
-- search functionality in start menu
 - Windows-key combos
 - Application Desktop Toolbars
 - desktop switching
